# chess-reporter

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DATA_DICTIONARY.md  DECISIONS.md  README.md  docker-compose.yml  main.py  pyproject.toml  pytest_out.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
data/database/: main.duckdb
docker/: chess-engine.Dockerfile  chess-reporter-engine-instance.Dockerfile  chess-reporter-engine-master.Dockerfile  chess-reporter-jupyter-lab.Dockerfile  chess-reporter.Dockerfile
docker/startup/: 00_logging.py
docs/: ARCHITECTURE.md  FILE.md  STACK.md
k8s/: chess-engine.yaml  chess-reporter-engine-instance.yaml  chess-reporter-engine-master.yaml  chess-reporter-jupyter-lab.yaml  chess-reporter-postgresql.yaml  chess-reporter.yaml  namespace.yaml
notebooks/: sandbox.ipynb
notebooks/experiments/: engine.ipynb  move.ipynb
scripts/: install_stockfish_unix.sh  install_stockfish_win.ps1
scritps/: clean.py
services/chess-reporter/: pyproject.toml
services/chess-reporter-engine-instance/: pyproject.toml
services/chess-reporter-engine-instance/src/chess_reporter_engine_instance/: core.py  main.py  settings.py  setup.py
services/chess-reporter-engine-instance/src/chess_reporter_engine_instance/builders/: __init__.py  build_engine_analysis_payload.py  build_engine_current_line_moves.py  build_engine_move_sequence.py  build_engine_payload.py  build_engine_raw_info_dict.py  build_engine_refutation_moves.py  build_engine_telemetry_payload.py  build_engine_tracing_payload.py  build_engine_variation_payload.py
services/chess-reporter-engine-instance/src/chess_reporter_engine_instance/routers/: __init__.py  health.py  run.py  specs.py
services/chess-reporter-engine-instance/src/chess_reporter_engine_instance/utils/: __init__.py  find_engine.py
services/chess-reporter-engine-master/: pyproject.toml
services/chess-reporter-engine-master/src/chess_reporter_engine_master/: __init__.py  core.py  main.py  schemas.py  settings.py  setup.py
services/chess-reporter-engine-master/src/chess_reporter_engine_master/utils/: __init__.py  spawner.py
services/chess-reporter-jupyter-lab/: pyproject.toml
services/chess-reporter-schemas/: pyproject.toml
services/chess-reporter-schemas/src/chess_reporter_schemas/api/: __init__.py  api_health_payload.py  api_health_status_type.py  api_response_status_type.py
services/chess-reporter-schemas/src/chess_reporter_schemas/engine/: __init__.py  engine_analysis_payload.py  engine_instance_specs_payload.py  engine_payload.py  engine_request.py  engine_response.py  engine_score_type.py  engine_telemetry_payload.py  engine_tracing_payload.py  engine_variation_payload.py
services/chess-reporter/src/chess_reporter/: __init__.py  bootstrap.py
services/chess-reporter/src/chess_reporter/domain/: __init__.py
services/chess-reporter/src/chess_reporter/domain/data/: __init__.py
services/chess-reporter/src/chess_reporter/domain/game/: __init__.py  game_outcome.py  game_phase.py  game_result.py  game_termination.py
services/chess-reporter/src/chess_reporter/domain/move/: __init__.py  build_move_key.py  move_classification.py  move_context.py  move_key.py  move_type.py
services/chess-reporter/src/chess_reporter/domain/position/: __init__.py  build_position_game_outcome_from_board.py  build_position_legal_moves_from_board.py  build_position_material_info_from_board.py  position_context.py  position_key.py  position_legal_moves.py  position_turn.py
services/chess-reporter/src/chess_reporter/evaluation/: evaluation_parameters.py
services/chess-reporter/src/chess_reporter/utils/: __init__.py  generate_hash_id.py  safe_string.py  setup_logger.py
src/chess_reporter/: __main__.py  bootstrap.py
src/chess_reporter/_scripts/: clean.py
src/chess_reporter/chess_domain/: chess_domain.py  classification_type.py  engine_setup.py  move_comment.py  move_comment_element.py  move_comment_title_type.py  position_setup.py  result_type.py  score_type.py  termination_type.py  turn_type.py
src/chess_reporter/chess_engine/: chess_engine_domain.py  chess_engine_instance.py  chess_engine_manager.py  chess_engine_parameters.py
src/chess_reporter/database/: __init__.py  database_bootstrapper.py  database_domain.py  database_manager.py  database_parameters.py
src/chess_reporter/database/sql/schema/: 01_chess_reporter.sql  02_workspace.sql
src/chess_reporter/database/sql/table/: 01_status.sql  (+1 more)
src/chess_reporter/database/sqls/: schemas.sql  tables.sql  tests.sql
src/chess_reporter/domain/data/: data_status.py
src/chess_reporter/domain/engine/: __init__.py  build_engine_current_line_moves.py  build_engine_refutation_moves.py  build_engine_variation_moves.py  build_move_sequence.py  engine_analisys.py  engine_analysis.py  engine_context.py  engine_evaluation_type.py  engine_score_type.py
src/chess_reporter/domain/game/: game_outcome.py
src/chess_reporter/domain/move/: __init__.py  move_comment.py  move_comment_element.py  move_comment_title.py  move_context.py
src/chess_reporter/domain/position/: __init__.py  get_position_game_outcome_from_board.py  get_position_legal_moves_from_board.py  get_position_material_info_from_board.py  position_context.py  position_material_info.py
src/chess_reporter/engine/: __init__.py  engine_config_data.py  engine_instance.py  engine_manager.py  engine_parameters.py
src/chess_reporter/position/: position_domain.py  position_manager.py  position_parameters.py
src/chess_reporter/storage/: __init__.py  storage_bootstrapper.py  storage_domain.py  storage_manager.py  storage_parameters.py
src/chess_reporter/utils/: find_engine.py  generate_hash_id.py  get_logic_cpu_available.py  setup_logger.py  utils.py
tests/: conftest.py  test_chess_domain.py  test_database_domain.py  test_database_manager.py  test_domain_data.py  test_domain_engine.py  test_domain_game.py  test_domain_move.py  test_domain_position.py  test_dummy.py  test_pipeline.py  test_storage.py  test_storage_domain.py  test_storage_manager.py  test_utils.py
