[project]
name = "chess-reporter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "duckdb>=1.4.4",
    "loguru>=0.7.3",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "sqlglot>=29.0.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyright>=1.1.0",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chess_reporter"]

[tool.uv.scripts]
clean = "python scripts/clean.py"
