[project]
name = "chess-reporter-workspace"
version = "0.3.0"
description = "Cold, objective chess game analysis — per-move accuracy, termination context penalties, and opening classification, powered by Stockfish and PostgreSQL."
requires-python = ">=3.13"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyright>=1.1.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.9.0",
]

[tool.uv.workspace]
members = [
    "services/chess-reporter",
    "services/chess-reporter-engine-instance",
    "services/chess-reporter-engine-master",
    "services/chess-reporter-jupyter-lab",
    "services/chess-reporter-schemas",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

# ---------------------------------------------------------------------------
# Pyright
# ---------------------------------------------------------------------------
[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
strict = false
reportMissingImports = true
reportMissingTypeStubs = false
