[project]
name = "chess-reporter-engine-instance"
version = "0.1.0"
description = "Stateless Stockfish analysis pod — receives a FEN, returns info_dicts."
requires-python = ">=3.13"

dependencies = [
    "chess-reporter-schemas",
    "fastapi>=0.115.0",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.7.0",
    "python-chess>=1.999",
    "uvicorn[standard]>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chess_reporter_engine_instance"]

[tool.uv.sources]
chess-reporter-schemas = { workspace = true }
