[project]
name = "chess-reporter-engine-master"
version = "0.1.0"
description = "Master node — fans out analysis to engine instances, aggregates results."
requires-python = ">=3.13"

dependencies = [
    "chess-reporter-schemas",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "kubernetes>=32.0.0",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.7.0",
    "uvicorn[standard]>=0.34.0",
]

[tool.uv.sources]
chess-reporter-schemas = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chess_reporter_engine_master"]
