[project]
name = "chess-reporter-jupyter-lab"
version = "0.1.0"
description = "JupyterLab environment for chess analysis notebooks."
requires-python = ">=3.13"

dependencies = [
    "chess-reporter",
    "jupyterlab>=4.5.5",
    "matplotlib>=3.10.0",
    "pandas>=3.0.1",
]

[tool.uv.sources]
chess-reporter = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chess_reporter_jupyter_lab"]
