[project]
name = "chess-reporter-schemas"
version = "0.1.0"
description = "Shared API contracts between chess-reporter services."
requires-python = ">=3.13"

dependencies = [
    "pydantic>=2.12.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chess_reporter_schemas"]
