[project]
name = "chess-reporter"
version = "0.2.5"
description = "Cold, objective chess game analysis — per-move accuracy, termination context penalties, and opening classification, powered by Stockfish and DuckDB."
requires-python = ">=3.13"

dependencies = [
    "chess-reporter-schemas",
    "httpx>=0.28.0",
    "kubernetes>=32.0.0",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "python-chess>=1.999",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyright>=1.1.0",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]

[tool.uv.sources]
chess-reporter-schemas = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chess_reporter"]
